# dnn-test-framework

./: .gitmodules  CMakeLists.txt  README.md  funcs.h  global.h  kernels.cuh  linear_layer.h  linear_layer_kernels.cu  linear_layer_kernels.cuh  main.cc  main.cu  nn_test.h
